tests/errors/test_undefined_function.mob
// Test undefined function error
print("Testing undefined function...");
var result = nonexistent_function(42);
print("This should not print");
